test_suite/tests/ui/float/validate/min_vs_max.stderr
error: `min` cannot be greater than `max`.
       Sometimes we all need a little break.
 --> tests/ui/float/validate/min_vs_max.rs:3:25
  |
3 | #[nutype(validate(max = 0, min = 20))]
  |                         ^
